<resources>
    <string name="app_name">URGURU</string>
    <string name="title_activity_sign_in">SignIn</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_profile">Profile</string>
    <string name="title_activity_create_profile1">CreateProfile1</string>
    <string name="title_activity_create_profile2">CreateProfile2</string>
    <string name="title_activity_create_profile3">CreateProfile3</string>
    <string name="title_activity_create_profile4">CreateProfile4</string>
    <string name="editText_email">Email address</string>
    <string name="editText_password">Password</string>
    <string name="button_signIn">Sign In</string>
    <string name="button_newAccount">New account</string>
    <string name="textView_createProfile">Create Your Profile</string>
    <string name="editText_realName">Full name</string>
    <string name="textView_sex">Sex</string>
    <string name="radio_male">Male</string>
    <string name="radio_female">Female</string>
    <string name="button_next">Next</string>
    <string name="textView_whenBorn">When where you born?</string>
    <string name="textView_whereLive">Where do you live?</string>
    <string name="editText_country">Country</string>
    <string name="editText_city">City</string>
    <string name="textView_avatarName">Create your Avatar</string>
    <string name="editText_avatarName">Avatar name</string>
    <string name="textView_avatarImage">Give your avatar a face</string>
    <string name="button_finish">Finish</string>
    <string name="textView_goodKarma">Good Karma</string>
    <string name="textView_badKarma">Bad Karma</string>
    <string name="imageView_urguruTitle_contentDescription">URGURU</string>
    <string name="title_activity_create_profile">CreateProfile</string>
    <string name="button_avatarImage">Give your Avatar a face</string>
    <string name="imageView_avatarImage">avatar</string>
    <string name="imageView_picturePlaceholder">placeholder</string>

    //SignIn
</resources>
